// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentSettingsLink with children renders link with custom text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #3358CC;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        Some Custom Link Text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with link props renders link with styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #3358CC;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  font-family: "DM Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 400;
  letter-spacing: -0.5px;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.5145833333333334em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5145833333333334em;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        Some Custom Link Text With Styles
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with no children renders link with default text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #3358CC;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        Manage Consent
      </span>
    </span>
  </a>
</DocumentFragment>
`;
